address key issue

--- a/city-explorer/index.html
+++ b/city-explorer/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>City Explorer</title>
@@ -121,6 +122,8 @@
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+  <script src="./scripts/variable-def.js"></script>
   <script src="./scripts/app.js"></script>
 </body>
+
 </html>
